# enfield

./: .gitignore  .travis.yml  Analyser.cpp  CMakeLists.txt  Graph.h  Isomorphism.cpp  LICENSE  Makefile  README.md  formal.txt  formalSpec.txt  p_3  rw.txt
archfiles/: 36-grid.json  36-ring.json  36-tree.json  qx2.json  qx3.json  tokyo.json
ci/: RunFunctionalTests.sh  RunUnitTests.sh
cmake/: FindJsonCpp.cmake  Tests.cmake
docs/: Doxyfile  annotated.xhtml  classes.xhtml  dir_000002_000006.xhtml  dir_000003_000002.xhtml  dir_000003_000004.xhtml  dir_000003_000006.xhtml  dir_000003_000007.xhtml  dir_000004_000002.xhtml  dir_000004_000006.xhtml  dir_000007_000004.xhtml  dir_000007_000006.xhtml  dir_000009_000000.xhtml  dir_000009_000006.xhtml  dir_000010_000000.xhtml  dir_000011_000000.xhtml  dir_000012_000000.xhtml  dir_000013_000000.xhtml  dir_000014_000000.xhtml  dir_000015_000000.xhtml  dir_000016_000000.xhtml  dir_000017_000000.xhtml  dir_000018_000000.xhtml  dir_06974191db7fbe66527a95ceac77ccfb.xhtml  dir_06974191db7fbe66527a95ceac77ccfb_dep.map  dir_06974191db7fbe66527a95ceac77ccfb_dep.md5  dir_0d485057de6219ed9ee4637c6df38af1.xhtml  dir_0d485057de6219ed9ee4637c6df38af1_dep.map  dir_0d485057de6219ed9ee4637c6df38af1_dep.md5  dir_15dbf64d7f9e9589da7a7339d5165684.xhtml  dir_15dbf64d7f9e9589da7a7339d5165684_dep.map  dir_15dbf64d7f9e9589da7a7339d5165684_dep.md5  dir_1c507328897757a68287604c3cbe9853.xhtml  dir_1c507328897757a68287604c3cbe9853_dep.map  dir_1c507328897757a68287604c3cbe9853_dep.md5  dir_36acf298a92b501eb37aa8f7aa697dc3.xhtml  dir_36acf298a92b501eb37aa8f7aa697dc3_dep.map  dir_36acf298a92b501eb37aa8f7aa697dc3_dep.md5  dir_4e1c057fba7592260fc9a25a8dee270f.xhtml  dir_4e1c057fba7592260fc9a25a8dee270f_dep.map  (+241 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+111 more)
include/enfield/: Pass.h
lib/: CMakeLists.txt  Pass.cpp
lib/Analysis/: CMakeLists.txt  DependencyBuilder.cpp  DependencyBuilderPass.cpp  FlattenPass.cpp  IdTable.cpp  Makefile  NodeVisitor.cpp  Nodes.cpp  Parser.yy  ParserHelper.cpp  Pass.cpp  QModule.cpp  QModulefyPass.cpp  Scanner.l
lib/Arch/: ArchGraph.cpp  Architectures.cpp  CMakeLists.txt
lib/Support/: ApproxTSFinder.cpp  BFSCachedDistance.cpp  BFSPathFinder.cpp  CMakeLists.txt  CommandLine.cpp  Defs.cpp  DoubleVal.cpp  ExpTSFinder.cpp  Graph.cpp  JsonParser.cpp  OneRestrictionSwapFinder.cpp  SimplifiedApproxTSFinder.cpp  Stats.cpp  Timer.cpp  TokenSwapFinder.cpp  WeightedGraph.cpp  WrapperVal.cpp
lib/Transform/: Allocators.cpp  ArchVerifierPass.cpp  CMakeLists.txt  CNOTLBOWrapperPass.cpp  CircuitGraph.cpp  CircuitGraphBuilderPass.cpp  DependencyBuilderPass.cpp  DependencyGraphBuilderPass.cpp  Driver.cpp  DynProgQbitAllocator.cpp  ErrorRateCalculationPass.cpp  FlattenPass.cpp  GateInline.cpp  IdTable.cpp  IdentityMappingFinder.cpp  InlineAllPass.cpp  IntrinsicGateCostPass.cpp  LayerBasedOrderingWrapperPass.cpp  LayersBuilderPass.cpp  Pass.cpp  PassCache.cpp  PathGuidedDepSolver.cpp  PathGuidedQbitAllocator.cpp  PathGuidedSolBuilder.cpp  QModule.cpp  QModuleQualityEvalPass.cpp  QModulefyPass.cpp  QbitAllocator.cpp  QbitToNumberPass.cpp  QbitterDepSolver.cpp  QbitterQbitAllocator.cpp  QbitterSolBuilder.cpp  QubitRemapPass.cpp  RandomMappingFinder.cpp  RandomQbitAllocator.cpp  RenameQbitsPass.cpp  ReverseEdgesPass.cpp  SemanticVerifierPass.cpp  SimpleQbitAllocator.cpp  Utils.cpp  (+3 more)
lib/Transform/Allocators/: Allocators.cpp  BoundedMappingTreeQAllocator.cpp  BoundedSIDepSolver.cpp  CMakeLists.txt  ChallengeWinnerQAllocator.cpp  DepSolverQAllocator.cpp  DynprogDepSolver.cpp  DynprogQAllocator.cpp  GreedyCktQAllocator.cpp  IBMQAllocator.cpp  JKUQAllocator.cpp  LayeredBMTQAllocator.cpp  OptBMTQAllocator.cpp  PathGuidedSolBuilder.cpp  QbitAllocator.cpp  QbitterSolBuilder.cpp  RandomMappingFinder.cpp  SabreQAllocator.cpp  SimpleDepSolver.cpp  SimpleQAllocator.cpp  StdSolutionQAllocator.cpp  WeightedPMMappingFinder.cpp  WeightedSIMappingFinder.cpp
lib/Transform/Allocators/BMT/: CMakeLists.txt  DefaultBMTQAllocatorImpl.cpp  ImprovedBMTQAllocator.cpp  ImprovedBMTQAllocatorImpl.cpp
lib/Transform/Allocators/Simple/: CMakeLists.txt  IdentityMappingFinder.cpp  PathGuidedSolBuilder.cpp  QbitterSolBuilder.cpp  RandomMappingFinder.cpp  WeightedSIMappingFinder.cpp
papers/: collange.bib  qregalloc.tex
papers/CGO18/: Problem.txt  paper.tex  refs.bib
prototype/: Analyser.cpp  Analyser.h  DynSolver.cpp  DynSolver.h  Graph.h  Isomorphism.cpp  Isomorphism.h  Makefile  ToDot.py  TokenSwap.cpp  TokenSwap.h  input  input2  p_1  p_5  p_7
tests/: ASTNodeTests.cpp  ApproxTSFinderTests.cpp  ArchGraphTests.cpp  ArchVerifierPassTests.cpp  ArchitectureTests.cpp  BFSCachedDistanceTests.cpp  BFSPathFinderTests.cpp  BitOptionsTests.cpp  BoundedMappingTreeQAllocatorTests.cpp  BoundedSIDepSolverTests.cpp  CMakeLists.txt  CNOTLBOWrapperPassTests.cpp  ChallengeWinnerQAllocatorTests.cpp  CircuitGraphBuilderPassTests.cpp  CircuitGraphTests.cpp  CommandLineTests.cpp  DependencyBuilderPassTests.cpp  DependencyGraphBuilderPassTests.cpp  DriverFileTests.cpp  DriverTests.cpp  DynProgQbitAllocatorTests.cpp  DynprogDepSolverTests.cpp  DynprogQAllocatorTests.cpp  EnumStringTests.cpp  FlattenPassTests.cpp  GateInlineTests.cpp  GraphDotifyTests.cpp  GraphTests.cpp  GreedyCktQAllocatorTests.cpp  IBMQAllocatorTests.cpp  IBMQX2Tests.cpp  IdTableTests.cpp  InlineAllPassTests.cpp  IntrinsicGateCostPassTests.cpp  JKUQAllocatorTests.cpp  LayeredBMTQAllocatorTests.cpp  LayersBuilderPassTests.cpp  OneRestrictionSwapFinderTests.cpp  OptBMTQAllocatorTests.cpp  PartialMatchingFinderTests.cpp  (+17 more)
tools/: CMakeLists.txt  Enfield.cpp  Generator.cpp  Inliner.cpp  Main.cpp
(+2481 files in other folders)
