add_library (EfdSupport
    ApproxTSFinder.cpp
    BFSCachedDistance.cpp
    BFSPathFinder.cpp
    CommandLine.cpp
    Defs.cpp
    ExpTSFinder.cpp
    Graph.cpp
    JsonParser.cpp
    Stats.cpp
    SimplifiedApproxTSFinder.cpp
    Timer.cpp
    TokenSwapFinder.cpp
    WeightedGraph.cpp
    WrapperVal.cpp)
